nioctib/bitcoin-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: bitcoin
    istio-injection: enabled
  name: bitcoin
