nioctib/btc-rpc-explorer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: btc-rpc-explorer
  name: btc-rpc-explorer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: btc-rpc-explorer
  template:
    metadata:
      labels:
        app: btc-rpc-explorer
      name: btc-rpc-explorer
    spec:
      containers:
      - args:
        image: liuhongchao/btc-rpc-explorer:latest
        imagePullPolicy: Always
        name: btc-rpc-explorer
#        resources:
#          limits:
#            cpu: "1"
#            memory: 3G
#          requests:
#            memory: 1500M
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsUser: 0
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: btc-rpc-explorer
spec:
  selector:
    app: btc-rpc-explorer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3002
  type: ClusterIP
