nioctib/alephium-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: alephium
    version: 0.7.5-M
  name: alephium
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alephium
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "12973"
        prometheus.io/scheme: http
        prometheus.io/scrape: "true"
      labels:
        app: alephium
      name: alephium
    spec:
      containers:
      - args:
        image: liuhongchao/alephium:0.8.1
        imagePullPolicy: Always
        name: alephium
        volumeMounts:
          - mountPath: "/alephium-home/.alephium"
            name: alephium-home
          - mountPath: "/alephium-home/.alephium/user.conf"
            name: alephium-configs
            subPath: user.conf
#        resources:
#          limits:
#            cpu: "1"
#            memory: 3G
#          requests:
#            memory: 1500M
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsUser: 65534
        fsGroup: 65534
      terminationGracePeriodSeconds: 30
      volumes:
        - name: alephium-home
          persistentVolumeClaim:
            claimName: alephium-blockchain-pvc-claim
        - name: alephium-configs
          configMap:
            name: alephium-configs
---
apiVersion: v1
kind: Service
metadata:
  name: alephium
spec:
  selector:
    app: alephium
  ports:
    - name: http
      protocol: TCP
      port: 12973
      targetPort: 12973
    - name: ws
      protocol: TCP
      port: 11973
      targetPort: 11973
    - name: p2p
      protocol: TCP
      port: 9973
      targetPort: 9973
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: alephium-nioctib-tech-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - alephium.nioctib.tech
    secretName: alephium-nioctib-tech-it-tls
  rules:
  - host: alephium.nioctib.tech
    http:
      paths:
      - path: /
        backend:
          serviceName: alephium
          servicePort: 12973
