nioctib/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana-nioctib-tech-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - grafana.nioctib.tech
    secretName: grafana-nioctib-tech-it-tls
  rules:
  - host: grafana.nioctib.tech  # For this to work, A record needs to be created in the DNS service
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
---
kind: Service
apiVersion: v1
metadata:
  name: grafana
  namespace: istio-system
spec:
  type: ExternalName
  externalName: grafana.istio-system.svc.cluster.local
  ports:
    - port: 3000
