nioctib/kiali-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kiali-nioctib-tech-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - kiali.nioctib.tech
    secretName: kiali-nioctib-tech-it-tls
  rules:
  - host: kiali.nioctib.tech
    http:
      paths:
      - path: /
        backend:
          serviceName: kiali
          servicePort: 20001
---
kind: Service
apiVersion: v1
metadata:
  name: kiali
  namespace: istio-system
spec:
  type: ExternalName
  externalName: kiali.istio-system.svc.cluster.local
  ports:
    - port: 20001
